# NewUECRayTracing

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Source.cpp
yk/: aabb.hpp  bvh.hpp  camera.hpp  color.hpp  config.hpp  custom.hpp  hit.hpp  hit_record.hpp  hittable.hpp  material.hpp  math.hpp  pos3.hpp  random.hpp  ray.hpp  scatter.hpp  texture.hpp  vec3.hpp
yk/hittables/: aabb.hpp  aarect.hpp  box.hpp  bvh.hpp  constant_medium.hpp  hittable_list.hpp  moving_sphere.hpp  rotate.hpp  sphere.hpp  translate.hpp
yk/materials/: dielectric.hpp  diffuse_light.hpp  isotropic.hpp  lambertian.hpp  metal.hpp
yk/textures/: checker_texture.hpp  image_texture.hpp  noise_texture.hpp  solid_color.hpp  solid_texture.hpp
